modules/security_group/main.tf
resource "aws_security_group" "alb_sg" {
  name   = "webapp-${var.environment}-alb-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    

  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = [aws_security_group.ec2_sg.id]
  }
  }

  tags = {
    Name = "webapp-${var.environment}-alb-sg"
  }
}

resource "aws_security_group" "ec2_sg" {
  name   = "webapp-${var.environment}-ec2-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
    
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "webapp-${var.environment}-ec2-sg"
  }
}
